--- a/projeto.html
+++ b/projeto.html
@@ -10,9 +10,9 @@
 <body>
     
     <h1> Aula Seletores Inicial </h1>
-    <p class="class"> Paragrefo 1 class </p>
-    <p class="class"> Paragrefo 2 class </p>
-    <p class="class"> Paragrefo 3 class </p>
+    <p class="p-class"> Paragrefo 1 class </p>
+    <p class="p-class"> Paragrefo 2 class </p>
+    <p class="p-class"> Paragrefo 3 class </p>
 
     <p id="p-id">Paragrafo 4 id </p>
 </body> 
