--- a/projeto.html
+++ b/projeto.html
@@ -15,5 +15,8 @@
     <p class="p-class"> Paragrefo 3 class </p>
 
     <p id="p-id">Paragrafo 4 id </p>
+    <div class="box"> caixa 1 </div>
+    <div class="box"> caixa 2 </div>
+    <div class="box"> caixa 3 </div>
 </body> 
 </html> 
